--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^5.5.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
