--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "prisma": "^5.5.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.5.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/uuid": "^9.0.6",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
