--- a/server/package.json
+++ b/server/package.json
@@ -13,18 +13,27 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "bcrypt": "^5.1.1",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.5.2",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/cookie-session": "^2.0.46",
     "@types/express": "^4.17.20",
+    "@types/express-session": "^1.17.9",
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/passport": "^1.0.14",
+    "@types/passport-google-oauth20": "^2.0.13",
     "@types/uuid": "^9.0.6",
     "nodemon": "^3.0.1",
+    "prisma": "^5.5.2",
     "typescript": "^5.2.2"
   }
 }
